# cmf-mcp-server

./: Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt
tools/: __init__.py  execution.py  pipeline.py
